Update source for new org, add sample data

--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,5 +1,5 @@
 {
-  "orgName": "Salesfroce Labs",
+  "orgName": "Salesforce Impact Labs",
   "edition": "Developer",
   "language": "en_US",
   "features": ["EnableSetPasswordInApi","AuthorApex"],
