modified package name and created beta release

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -1,12 +1,19 @@
 {
-  "packageDirectories": [
-    {
-      "path": "force-app",
-      "default": true
+    "packageDirectories": [
+        {
+            "path": "force-app",
+            "default": true,
+            "package": "Grants Content Kit",
+            "versionName": "ver 0.1",
+            "versionNumber": "0.1.0.NEXT"
+        }
+    ],
+    "name": "Grants Content Kit",
+    "namespace": "",
+    "sfdcLoginUrl": "https://login.salesforce.com",
+    "sourceApiVersion": "54.0",
+    "packageAliases": {
+        "Grants Content Kit": "0Ho8a000000fxV5CAI",
+        "Grants Content Kit@0.1.0-1": "04t8a000001aJXYAA2"
     }
-  ],
-  "name": "Grants Content Kit",
-  "namespace": "",
-  "sfdcLoginUrl": "https://login.salesforce.com",
-  "sourceApiVersion": "54.0"
 }
