--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -14,6 +14,7 @@
     "sourceApiVersion": "54.0",
     "packageAliases": {
         "Grants Content Kit": "0Ho8a000000fxV5CAI",
-        "Grants Content Kit@0.1.0-1": "04t8a000001aJXYAA2"
+        "Grants Content Kit@0.1.0-1": "04t8a000001aJXYAA2",
+        "Grants Content Kit@0.1.0-2": "04t8a000001aJYWAA2"
     }
 }
