--- a/.github/workflows/feature_test.yml
+++ b/.github/workflows/feature_test.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Deploy Code
         run:
           sfdx force:source:push -u dev1
+      - name: Run Apex Test
+        run:
+          sfdx force:apex:test:run -u dev1 --wait 600 -c -r human
       - name: Delete Scratch org
         run:
           sfdx force:org:delete  -u dev1 -p
