--- a/.github/workflows/feature_build.yml
+++ b/.github/workflows/feature_build.yml
@@ -8,6 +8,9 @@ on:
     paths-ignore:
       - 'docs/**'
       - 'README.md'
+env:
+  CUMULUSCI_KEYCHAIN_CLASS: cumulusci.core.keychain.EnvironmentProjectKeychain
+  CUMULUSCI_SERVICE_github: ${{ secrets.CUMULUSCI_SERVICE_github }}
 jobs:
   unit_tests:
     name: 'Deploy Code'
