--- a/.forceignore
+++ b/.forceignore
@@ -48,4 +48,5 @@ force-app/main/default/objects/Case/businessProcess/Sales Systems Requests.busin
 force-app/main/default/objects/Case/businessProcess/Support Process.businessProcess-met.xml
 force-app/main/default/objects/Case/recordTypes/Test.recordType-meta.xml
 
+force-app/main/default/layouts/EmailMessage-Email Message Layout.layout-meta.xml
 #force-app/main/default/assignmentRules/Case.assignmentRules-meta.xml
