Feature #27 Edit mode toggle functionality

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,8 @@
     "**/.mvn": true,
     "**/.exchange_modules_tmp": true,
     ".mule": true
-  }
+  },
+  "cSpell.words": [
+    "onselectedblockchange"
+  ]
 }
