--- a/.github/workflows/beta_release.yml
+++ b/.github/workflows/beta_release.yml
@@ -1,12 +1,8 @@
 name: beta release
 
 on:
-  push:
-    branches:
-      - 'main'
-    paths-ignore:
-      - 'docs/**'
-      - 'README.md'
+  workflow_dispatch:
+    
 env:
       CUMULUSCI_KEYCHAIN_CLASS: cumulusci.core.keychain.EnvironmentProjectKeychain
       CUMULUSCI_SERVICE_github: ${{ secrets.CUMULUSCI_SERVICE_GITHUB }}
