Update version id

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -26,6 +26,7 @@
     "Grants Content Kit@0.1.0-5-main": "04t8a000001B8qmAAC",
     "Grants Content Kit@1.0.0-1-main": "04t8a000001B8qrAAC",
     "Grants Content Kit@1.0.0-2-main": "04t8a000001B8vnAAC",
-    "Grants Content Kit@2.0.0-1-main": "04t8a000001B8vsAAC"
+    "Grants Content Kit@2.0.0-1-main": "04t8a000001B8vsAAC",
+    "Grants Content Kit@2.1.0-1-main": "04t8a000000qq4HAAQ"
   }
 }
