--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -46,9 +46,7 @@ flows:
                 options:
                     command: cci org default --org dev
             5:
-               task: command
-               options:
-                   command: sfdx data import tree -p test-data/export-section-GGW_Section__c-plan.json
+               task: load_dataset
     
     gk_release_beta:
         description: 'Generate Release notes and auto merge main branch.'
