--- a/.github/workflows/beta_release.yml
+++ b/.github/workflows/beta_release.yml
@@ -71,3 +71,25 @@ jobs:
       # Housekeeping
       - name: 'Delete scratch org'
         run: sf org delete scratch -p -o scratch-org
+
+      # Pull Request commit generated Package Id in sfdx-package.json file. 
+      - name: Create Pull Request
+        id: create-pr
+        uses: peter-evans/create-pull-request@v6
+        with:
+          title: 'Bump package version to ${{ steps.createPackageVersion.outputs.packageVersionId }}'
+          body: |
+            This pull request updates the package version to ${{ steps.createPackageVersion.outputs.packageVersionId }}.
+          branch: 'bump-package-version-${{ steps.createPackageVersion.outputs.packageVersionId }}'
+          commit-message: 'chore: bump package version to ${{ steps.createPackageVersion.outputs.packageVersionId }}'
+          labels: 'dependencies, automated pr'
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+        # Approve and mark PR for auto merge
+      - name: 'Approve and mark PR for auto merge'
+        run: |
+            gh pr review --approve "$PR_NUMBER"
+            gh pr merge --auto --squash --delete-branch "$PR_NUMBER" 
+        env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            PR_NUMBER: ${{ steps.create-pr.outputs.pull-request-number }}
