--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
       "path": "force-app",
       "default": true,
       "package": "Grants Content Kit",
-      "versionName": "Winter 24",
-      "versionNumber": "2.1.0.NEXT",
+      "versionName": "Spring 24",
+      "versionNumber": "3.1.0.NEXT",
       "apexTestAccess": {
         "permissionSets": [
           "GGW_User_Permissions"
@@ -18,7 +18,7 @@
   "sfdcLoginUrl": "https://login.salesforce.com",
   "sourceApiVersion": "54.0",
   "packageAliases": {
-    "Grants Content Kit": "0Ho8a000000fxV5CAI",
+    "Grants Content Kit": "0Ho8a0000008OTFCA2",
     "Grants Content Kit@0.1.0-1": "04t8a000001aJXYAA2",
     "Grants Content Kit@0.1.0-2": "04t8a000001aJYWAA2",
     "Grants Content Kit@0.1.0-3-main": "04t8a000001B8qcAAC",
