--- a/.github/workflows/beta_release.yml
+++ b/.github/workflows/beta_release.yml
@@ -2,10 +2,12 @@ name: beta release
 
 on:
   workflow_dispatch:
-    
-env:
-      CUMULUSCI_KEYCHAIN_CLASS: cumulusci.core.keychain.EnvironmentProjectKeychain
-      CUMULUSCI_SERVICE_github: ${{ secrets.CUMULUSCI_SERVICE_GITHUB }}
+    inputs:
+        versionName:
+          description: 'Name of release (e.g., Spring)'
+          required: true
+        
+      
 jobs:
   unit_tests:
     name: "Run Beta release"
@@ -47,12 +49,12 @@ jobs:
         id: createPackageVersion
         run: |
           set +e
-          json=$(sf package version create -p "Grants Content Kit" -x -f config/project-scratch-def.json -w 10 -b main -c --json)
+          json=$(sf package version create -p "Grants Content Kit" -x -f config/project-scratch-def.json -a ${{ github.event.inputs.versionName}} -w 10 -b main -c --json)
           echo $json
           status=$(echo $json | jq '.status')
           if [ $status == "0" ]; then
           packageVersionId=$(echo $json | jq -r '.result.SubscriberPackageVersionId')
-          echo "::set-output name=packageVersionId::$packageVersionId"
+          echo "packageVersionId=$packageVersionId" >> $GITHUB_OUTPUT
           else
           echo "sf package creation failed"
           fi
