--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,7 +4,6 @@
       "path": "force-app",
       "default": true,
       "package": "Grants Content Kit",
-      "versionName": "Spring 24",
       "versionNumber": "3.1.0.NEXT",
       "apexTestAccess": {
         "permissionSets": [
@@ -14,19 +13,10 @@
     }
   ],
   "name": "Grants Content Kit",
-  "namespace": "",
+  "namespace": "GCKit",
   "sfdcLoginUrl": "https://login.salesforce.com",
   "sourceApiVersion": "54.0",
   "packageAliases": {
-    "Grants Content Kit": "0Ho8a0000008OTFCA2",
-    "Grants Content Kit@0.1.0-1": "04t8a000001aJXYAA2",
-    "Grants Content Kit@0.1.0-2": "04t8a000001aJYWAA2",
-    "Grants Content Kit@0.1.0-3-main": "04t8a000001B8qcAAC",
-    "Grants Content Kit@0.1.0-4-main": "04t8a000001B8qhAAC",
-    "Grants Content Kit@0.1.0-5-main": "04t8a000001B8qmAAC",
-    "Grants Content Kit@1.0.0-1-main": "04t8a000001B8qrAAC",
-    "Grants Content Kit@1.0.0-2-main": "04t8a000001B8vnAAC",
-    "Grants Content Kit@2.0.0-1-main": "04t8a000001B8vsAAC",
-    "Grants Content Kit@2.1.0-1-main": "04t8a000000qq4HAAQ"
+    "Grants Content Kit": "0Ho8a0000008OTFCA2"
   }
 }
