--- a/.github/workflows/feature_build.yml
+++ b/.github/workflows/feature_build.yml
@@ -29,23 +29,23 @@ jobs:
           uses: actions/checkout@v4
 
         # Store secret for dev hub
-        - name: 'Populate auth file with DEV_HUB_AUTH secret'
+        - name: 'Populate auth file with DEV_HUB_AUTH_URL secret'
           shell: bash
           run: |
-              echo ${{ secrets.DEV_HUB_AUTH}} > ./DEV_HUB_AUTH.txt
-              secretFileSize=$(wc -c "./DEV_HUB_AUTH.txt" | awk '{print $1}')
+              echo ${{ secrets.DEV_HUB_AUTH_URL}} > ./DEV_HUB_AUTH_URL.txt
+              secretFileSize=$(wc -c "./DEV_HUB_AUTH_URL.txt" | awk '{print $1}')
               if [ $secretFileSize == 1 ]; then
-                  echo "Missing DEV_HUB_AUTH secret. Is this workflow running on a fork?";
+                  echo "Missing DEV_HUB_AUTH_URL secret. Is this workflow running on a fork?";
                   exit 1;
               fi
 
         # Authenticate dev hub
         - name: 'Authenticate Dev Hub'
-          run: sf org login sfdx-url -f ./DEV_HUB_AUTH.txt -a devhub -d
+          run: sf org login sfdx-url -f ./DEV_HUB_AUTH_URL.txt -a devhub -d
 
         # Remove auth file
         - name: 'Remove auth file'
-          run: rm -f ./DEV_HUB_AUTH.txt
+          run: rm -f ./DEV_HUB_AUTH_URL.txt
         
         # Install Python
         - name: Set up Python
