Updated cci and sfdx files.

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -3,8 +3,6 @@
     {
       "path": "force-app",
       "default": true,
-      "package": "Grants Content Kit",
-      "versionNumber": "3.1.0.NEXT",
       "apexTestAccess": {
         "permissionSets": [
           "GGW_User_Permissions"
@@ -13,11 +11,6 @@
     }
   ],
   "name": "Grants Content Kit",
-  "namespace": "GCKit",
   "sfdcLoginUrl": "https://login.salesforce.com",
-  "sourceApiVersion": "54.0",
-  "packageAliases": {
-    "Grants Content Kit": "0Ho8a0000008OTFCA2",
-    "Grants Content Kit@3.1.0-2-main": "04t8a000000qqHSAAY"
-  }
+  "sourceApiVersion": "54.0"
 }
