--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -3,6 +3,7 @@ project:
     name: GrantGuides
     package:
         name: ggw
+        namespace: GCKit
         api_version: '55.0'
     git:
         default_branch: 'main'
