--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -2,7 +2,7 @@ minimum_cumulusci_version: '3.74.0'
 project:
     name: GrantGuides
     package:
-        name: ggw
+        name: Grant Content Kit
         namespace: GCKit
         api_version: '55.0'
     git:
