Move to minor releases.

--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -56,6 +56,6 @@ flows:
                     skip_validation: False
                     ancestor_id: latest_github_release
                     version_base: latest_github_release
-                    version_type: major
+                    version_type: minor
                     force_upload: True
                     create_unlocked_dependency_packages: False
